--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <section>
     <div>
     <h1>Contact</h1>
-      <h6> My Email </h6>
+      <h6> My Email- jackelam20@gmail.com</h6>
     </div>
    </section>
   </body>
